# streamlit-project

./: Makefile  README.md  form_applis.py  pyproject.toml
Applis/: decisiontree.pkl  form_applis.py  requirements.txt
expresso_project/: encoding-data.py  feature-engineering.py
models/: ML-classifier.py
